--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
     </head>
     <body>
         <h1>Lorem ipum</h1>
+        <p>Lorem ipum dolor sit</p>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact Us</li>
+        </ul>
     </body>
 </html>
